Fix cut off text in pie chart

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -128,6 +128,10 @@ h1 {
   @apply inline-block w-4 h-4;
 }
 
+.VictoryContainer svg {
+  overflow: visible;
+}
+
 .VictoryContainer path {
   @apply cursor-pointer;
 }
